major refactor of player inventory

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,7 +2,7 @@
   <div class="navbar navbar-default" role="navigation">
     <div class="container">
       <div class="row">
-        <div class="col-md-11 mt-20 mb-20">
+        <div class="col-md-11 col-xs-12 mt-20 mb-20">
           <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(mainPlayer, platformValue)">
             <div class="onoffswitch labeled">
               <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch09" ng-model="platformValue" checked="">
@@ -19,7 +19,7 @@
             </div>
           </form>
         </div>
-        <div class="col-md-1">
+        <div class="col-md-1 hidden-xs">
           <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_blank">
             <img class="img-responsive mt-10 mb-10" ng-src="images/github_icon.png" style="height: 50px;">
           </a>
