fixed syntax from jshint, extracted views into partials, revive snipe by calculation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -159,3 +159,11 @@ img.kinetic-dmg {
   }
 
 }
+
+.bor-sm-r {
+  border-right: #616f77 1px solid;
+}
+
+.bor-sm-b {
+  border-bottom: #616f77 1px solid;
+}
