--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,39 +1,4 @@
-<div class="header">
-  <div class="navbar navbar-default" role="navigation">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-11 col-xs-12 mt-20 mb-20">
-          <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(mainPlayer, platformValue)">
-            <div class="onoffswitch labeled">
-              <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="switch09" ng-model="platformValue" checked="">
-              <label class="onoffswitch-label" for="switch09">
-                <span class="onoffswitch-inner"></span>
-                <span class="onoffswitch-switch"></span>
-              </label>
-            </div>
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Enter a Guardian's name" ng-model="mainPlayer">
-              <span class="input-group-btn">
-                <button class="btn btn-default" type="submit">Search</button>
-              </span>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-1 hidden-xs">
-          <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_blank">
-            <img class="img-responsive mt-10 mb-10" ng-src="images/github_icon.png" style="height: 50px;">
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container" ng-show="status">
-  <div class="text-center alert alert-warning">
-    <strong>{{status}}</strong>
-  </div>
-</div>
+<ng-include src="'views/shared/header.html'"></ng-include>
 
 <div class="container" ng-hide="status">
   <div class="row">
@@ -66,15 +31,12 @@
       <div class="row" style="height: 20px;">
         <div class="col-md-12 col-sm-12">
           <span class="label bg-danger" style="margin-right: 2px" ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index">{{hazard}}</span>
-          <!--<span class="label bg-danger" ng-repeat="hazard in player.weapons.hazards track by $index">{{hazard}}</span>
-          <span class="label bg-danger" ng-repeat="hazard in player.armors.hazards track by $index">{{hazard}}</span>
-          <span class="label bg-danger" ng-repeat="hazard in player.classNodes.hazards track by $index">{{hazard}}</span>-->
         </div>
       </div>
 
       <section class="tile tile-simple">
         <div class="tile-body bg-tr-black lt p-0">
-          <ng-include src="'views/player.html'"></ng-include>
+          <ng-include src="'views/fireteam/player.html'"></ng-include>
         </div>
       </section>
     </div>
