--- a/app/views/main.html
+++ b/app/views/main.html
@@ -28,9 +28,9 @@
         </div>
       </div>
 
-      <div class="row" style="height: 20px;">
+      <div class="row" style="height:20px">
         <div class="col-md-12 col-sm-12">
-          <span class="label bg-danger" style="margin-right: 2px" ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index">{{hazard}}</span>
+          <span class="label bg-danger" style="margin-right:2px" ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index">{{hazard}}</span>
         </div>
       </div>
 
