--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -77,6 +77,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 }
 
 body {
+  font-size: 13px;
   padding: 0;
 }
 
@@ -170,10 +171,27 @@ img.kinetic-dmg {
 
 .tab-content .tab-pane {
   padding: 0px;
+  min-height: 483px;
 }
 
 tr.thin {
   td {
     padding: 0!important;
   }
+}
+
+.mr-3 {
+  margin-right: 3px;
+}
+
+.nav > li > a {
+  padding: 3px 15px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
 }
