--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,12 +1,15 @@
 <ng-include src="'views/fireteam/info.html'"></ng-include>
 
-<tabset justified="true">
+<tabset class="tabs-dark" justified="true">
   <tab heading="Equipped">
     <ng-include src="'views/fireteam/stats.html'"></ng-include>
     <ng-include src="'views/fireteam/weapons.html'"></ng-include>
     <ng-include src="'views/fireteam/armor.html'"></ng-include>
   </tab>
-  <tab heading="Detailed Stats">
-    <ng-include src="'views/fireteam/details.html'"></ng-include>
+  <!--<tab heading="Details">-->
+    <!--<ng-include src="'views/fireteam/details.html'"></ng-include>-->
+  <!--</tab>-->
+  <tab heading="Last Match">
+    <ng-include src="'views/fireteam/history.html'"></ng-include>
   </tab>
 </tabset>
