--- a/app/views/fireteam/details.html
+++ b/app/views/fireteam/details.html
@@ -40,5 +40,5 @@
       <!--<span class="text-left text-sm">{{weaponItems[weapon.referenceId].name}}</span>-->
       <!--<span class="text-left text-sm">kills: {{weapon.values.uniqueWeaponKills.basic.value}}</span>-->
     <!--</div>-->
-  </div>
-</div>
+  <!--</div>-->
+<!--</div>-->
