--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,6 +1,6 @@
 <ng-include src="'views/fireteam/info.html'"></ng-include>
 
-<tabset class="tabs-dark" justified="true">
+<tabset class="tabs-dark col-md-12 col-xs-12 p-0 mb-10" justified="true">
   <tab heading="Equipped">
     <ng-include src="'views/fireteam/stats.html'"></ng-include>
     <ng-include src="'views/fireteam/weapons.html'"></ng-include>
