--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -1,11 +1,19 @@
 <div class="mb-0 row">
   <div class="col-md-12 col-xs-12">
-    <i class="fa fa-circle mr-3"
+    <i class="fa fa-circle mr-3 hidden-xs"
        ng-repeat="str in player.pastActivities track by $index"
        ng-class="str.standing === 0 ? 'win' : 'lose'"
        popover="K/D: {{str.kd}} with {{str.kills}} kills"
        popover-title="{{str.date | date : format : medium}}"
        popover-trigger="mouseenter"
+      ></i>
+    <i class="fa fa-circle mr-3 visible-xs"
+       ng-repeat="str in player.pastActivities track by $index"
+       ng-class="str.standing === 0 ? 'win' : 'lose'"
+       popover="K/D: {{str.kd}} with {{str.kills}} kills"
+       popover-title="{{str.date | date : format : medium}}"
+       popover-trigger="mouseenter"
+       ng-if="$index > 17"
       ></i>
   </div>
 </div>
