Update mobile win loss icons, mobile can only fit 18

--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -13,8 +13,7 @@
        popover="K/D: {{str.kd}} with {{str.kills}} kills"
        popover-title="{{str.date | date : format : medium}}"
        popover-trigger="mouseenter"
-       ng-if="$index > 17"
-      ></i>
+       ng-if="$index > 7"></i>
   </div>
 </div>
 <div class="row">
