--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -20,16 +20,12 @@
       </p>
       <div class="mb-0 row">
         <div class="col-md-6 col-xs-6">
-          <i class="fa fa-circle hidden-xs mr-3"
+          <i class="fa fa-circle {{$index > 14 ? 'hidden-xs' : ''}} mr-3"
              ng-repeat="str in player.pastActivities track by $index"
              ng-class="str.standing === 0 ? 'win' : 'lose'"
              ng-if="$index > 14"
             ></i>
-          <i class="fa fa-circle visible-xs mr-3"
-             ng-repeat="str in player.pastActivities track by $index"
-             ng-class="str.standing === 0 ? 'win' : 'lose'"
-             ng-if="$index > 16"
-            ></i>
+        
           <!--<span class="streak"-->
             <!--ng-repeat="str in player.pastActivities track by $index"-->
             <!--ng-class="str.standing === 0 ? 'win' : 'lose'"-->
