--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -22,9 +22,7 @@
         <div class="col-md-6 col-xs-6">
           <i class="fa fa-circle {{$index > 14 ? 'hidden-xs' : ''}} mr-3"
              ng-repeat="str in player.pastActivities track by $index"
-             ng-class="str.standing === 0 ? 'win' : 'lose'"
-             ng-if="$index > 14"
-            ></i>
+             ng-class="str.standing === 0 ? 'win' : 'lose'"></i>
         
           <!--<span class="streak"-->
             <!--ng-repeat="str in player.pastActivities track by $index"-->
