move match history to main view

--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -1,4 +1,4 @@
-<div class="mb-0 row">
+<!--<div class="mb-0 row">
   <div class="col-md-12 col-xs-12">
     <i class="fa fa-circle mr-3 {{$index > 17 ? 'hidden-xs' : ''}}"
        ng-repeat="str in player.pastActivities track by $index"
@@ -8,7 +8,8 @@
        popover-trigger="mouseenter"
       ></i>
   </div>
-</div>
+</div>-->
+
 <div class="row">
   <div class="col-xs-3 col-md-3 pr-0">
     <div class="p-0 col-xs-12 col-md-12 text-center">
