--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -11,6 +11,7 @@
     <!--</div>-->
   <!--</div>-->
 <!--</div>-->
+
 <div class="row" style="margin-top: -3px;">
   <div class="col-md-12 col-sm-12 col-xs-12">
     <progressbar popover="Intellect: {{player.int}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0 " max="270" type="greensea" value="player.int > 270 ? 270 : player.int"></progressbar>
@@ -20,5 +21,17 @@
   </div>
   <div class="col-md-12 col-sm-12 col-xs-12">
     <progressbar popover="Strength: {{player.str}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0 " max="270" type="warning" value="player.str > 270 ? 270 : player.str"></progressbar>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12 col-xs-12 text-center">
+    <i class="fa fa-circle mr-3 {{$index > 17 ? 'hidden-xs' : ''}}"
+       ng-repeat="str in player.pastActivities track by $index"
+       ng-class="str.standing === 0 ? 'win' : 'lose'"
+       popover="K/D: {{str.kd}} with {{str.kills}} kills"
+       popover-title="{{str.date | date : format : medium}}"
+       popover-trigger="mouseenter"
+      ></i>
   </div>
 </div>
