remove match history from emblem view

--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -20,9 +20,9 @@
       </p>
       <div class="mb-0 row">
         <div class="col-md-6 col-xs-6">
-          <i class="fa fa-circle {{$index > 14 ? 'hidden-xs' : ''}} mr-3"
+          <!--<i class="fa fa-circle {{$index > 14 ? 'hidden-xs' : ''}} mr-3"
              ng-repeat="str in player.pastActivities track by $index"
-             ng-class="str.standing === 0 ? 'win' : 'lose'"></i>
+             ng-class="str.standing === 0 ? 'win' : 'lose'"></i>-->
         
           <!--<span class="streak"-->
             <!--ng-repeat="str in player.pastActivities track by $index"-->
