refactor definition files

--- a/app/views/fireteam/details.html
+++ b/app/views/fireteam/details.html
@@ -37,7 +37,7 @@
 
   <!--<div class="row" ng-repeat="weapon in player.playerWeapons">-->
     <!--<div class="col-xs-10">-->
-      <!--<span class="text-left text-sm">{{weaponItems[weapon.referenceId].name}}</span>-->
+      <!--<span class="text-left text-sm">{{weaponDefinitions[weapon.referenceId].name}}</span>-->
       <!--<span class="text-left text-sm">kills: {{weapon.values.uniqueWeaponKills.basic.value}}</span>-->
     <!--</div>-->
   <!--</div>-->
