--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -188,10 +188,16 @@ tr.thin {
   padding: 3px 15px;
 }
 
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
+margin-top: 20px;
 }
+
+
+//.footer {
+//  position: absolute;
+//  bottom: 0;
+//  width: 100%;
+//  height: 60px;
+//  background-color: #f5f5f5;
+//}
