--- a/app/views/shared/footer.html
+++ b/app/views/shared/footer.html
@@ -1,17 +1,17 @@
-    <footer class="footer hidden-xs">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-12">
-            <h5 class="custom-font pt-10 text-left">© 2015 DestinyTrialsReport</h5>
-          </div>
-          <div class="col-md-6 col-sm-12 mt-5">
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="text-right" target="_top">
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
-              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-              <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-            </form>
-          </div>
-        </div>
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-xs-6">
+        <h5 class="custom-font pt-10 text-left">© 2015 DestinyTrialsReport</h5>
       </div>
-    </footer>
+      <div class="col-md-6 col-xs-6 mt-5">
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" class="text-right" target="_top">
+          <input type="hidden" name="cmd" value="_s-xclick">
+          <input type="hidden" name="hosted_button_id" value="A3T6F2QDXUTCN">
+          <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+          <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+      </div>
+    </div>
+  </div>
+</footer>
