--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -26,7 +26,7 @@
 
 <div class="row">
   <div class="col-md-12 col-xs-12 text-center">
-    <i class="fa fa-circle mr-3 {{$index > 7 ? '' : 'hidden-xs'}}"
+    <i class="fa fa-circle mr-3 {{$index < 7 ? (player.pastActivities.length - $index ) > 18 ? 'hidden-xs' : '' : ''}}"
        ng-repeat="str in player.pastActivities track by $index"
        ng-class="str.standing === 0 ? 'win' : 'lose'"
        popover="K/D: {{str.kd}} with {{str.kills}} kills"
@@ -35,3 +35,4 @@
       ></i>
   </div>
 </div>
+
