reduce paddin on right side of emblem view & correct not aligned flawless text

--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -4,19 +4,19 @@
       <!--<img class="img-responsive" ng-src="{{player.emblem || ''}}" style="height:65px; position:absolute">-->
       <p class="large hidden-xs mb-0">
         <span>{{player.name}}</span>
-        <span ng-show="player.stats.killsDeathsRatio" class="right">K/D: {{player.stats.killsDeathsRatio.basic.displayValue}}</span>
+        <span ng-show="player.stats.killsDeathsRatio" class="right pr-10">K/D: {{player.stats.killsDeathsRatio.basic.displayValue}}</span>
       </p>
       <p class="large visible-xs mb-0">
         <span>{{player.name}}</span>
-        <span ng-show="player.stats.killsDeathsRatio" class="right">{{player.stats.killsDeathsRatio.basic.displayValue}}</span>
+        <span ng-show="player.stats.killsDeathsRatio" class="right pr-10">{{player.stats.killsDeathsRatio.basic.displayValue}}</span>
       </p>
       <p class="hidden-xs mb-0">
         <span ng-show="player.level && player.class.name">Level {{player.level}} {{player.class.name}}</span>
-        <span ng-show="player.stats.activitiesEntered" class="right">Win Avg: {{((player.stats.activitiesWon.basic.value/player.stats.activitiesEntered.basic.value)*100).toFixed(0)}}%</span>
+        <span ng-show="player.stats.activitiesEntered" class="right pr-10">Win Avg: {{((player.stats.activitiesWon.basic.value/player.stats.activitiesEntered.basic.value)*100).toFixed(0)}}%</span>
       </p>
       <p class="visible-xs mb-0">
         <span ng-show="player.level && player.class.name">{{player.level}} {{player.class.name}}</span>
-        <span ng-show="player.stats.activitiesEntered" class="right">Win: {{((player.stats.activitiesWon.basic.value/player.stats.activitiesEntered.basic.value)*100).toFixed(0)}}%</span>
+        <span ng-show="player.stats.activitiesEntered" class="right pr-10">Win: {{((player.stats.activitiesWon.basic.value/player.stats.activitiesEntered.basic.value)*100).toFixed(0)}}%</span>
       </p>
       <div class="mb-0 row">
         <div class="col-md-6 col-xs-6">
@@ -32,9 +32,9 @@
             <!--popover-trigger="mouseenter">•</span>-->
         </div>
         <div class="col-md-6 col-xs-6 text-right">
-          <span class="right text-white pr-20" ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
-          <span class="text-white pr-20" ng-show="player.lighthouse === true">Flawless</span>
-          <p class="text-center mb-0 pr-20" ng-show="player.neverTrials">No previous trials games</p>
+          <span class="right text-white pr-10" ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
+          <span class="text-white pr-10" ng-show="player.lighthouse === true">Flawless</span>
+          <p class="text-center mb-0 pr-10" ng-show="player.neverTrials">No previous trials games</p>
         </div>
       </div>
     </div>
