--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -1,35 +1,9 @@
-<!--<div class="row">-->
-  <!--<div class="col-md-12 col-sm-12 col-xs-12">-->
-    <!--<div class="bor-sm-b bor-sm-r col-md-4 col-sm-4 col-xs-4 pl-0 pr-0">-->
-      <!--<progressbar popover="Intellect: {{player.int}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0 " max="270" type="greensea" value="player.int"></progressbar>-->
-    <!--</div>-->
-    <!--<div class="bor-sm-b bor-sm-r col-md-4 col-sm-4 col-xs-4 pl-0 pr-0">-->
-      <!--<progressbar popover="Discipline: {{player.dis}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0" max="270" value="player.dis"></progressbar>-->
-    <!--</div>-->
-    <!--<div class="bor-sm-b col-md-4 col-sm-4 col-xs-4 pl-0 pr-0">-->
-      <!--<progressbar popover="Strength: {{player.str}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0 " max="270" type="warning" value="player.str"></progressbar>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
-
-<!--<div class="row" style="margin-top: -3px;">
-  <div class="col-md-12 col-sm-12 col-xs-12">
-    <progressbar popover="Intellect: {{player.int}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0 " max="270" type="greensea" value="player.int > 270 ? 270 : player.int"></progressbar>
-  </div>
-  <div class="col-md-12 col-sm-12 col-xs-12">
-    <progressbar popover="Discipline: {{player.dis}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0" max="270" value="player.dis > 270 ? 270 : player.dis"></progressbar>
-  </div>
-  <div class="col-md-12 col-sm-12 col-xs-12">
-    <progressbar popover="Strength: {{player.str}}" popover-trigger="mouseenter" class="progress-sm progress-striped not-rounded m-0 " max="270" type="warning" value="player.str > 270 ? 270 : player.str"></progressbar>
-  </div>
-</div>-->
-
 <div class="row" style="margin-top:-3px">
   <div class="col-md-12 col-sm-12 col-xs-12">
-    <progress max="(player.int > 270 ? 270 : player.int) + (player.dis > 270 ? 270 : player.dis) + (player.str > 270 ? 270 : player.str)" animate="true" class="progress-striped not-rounded m-0">
-      <bar type="greensea" value="player.int > 270 ? 270 : player.int" popover="Intellect: {{player.int}}" popover-trigger="mouseenter"><span>Intellect</span></bar>
-      <bar value="player.dis > 270 ? 270 : player.dis" popover="Discipline: {{player.dis}}" popover-trigger="mouseenter"><span>Discipline</span></bar>
-      <bar type="warning" value="player.str > 270 ? 270 : player.str" popover="Strength: {{player.str}}" popover-trigger="mouseenter"><span>Strength</span></bar>
+    <progress animate="true" class="progress-striped not-rounded m-0">
+      <bar type="greensea" value="(player.cInt)/(player.cDis + player.cInt + player.cStr) * 100" popover="Intellect: {{player.int}}" popover-trigger="mouseenter"><span>Int</span></bar>
+      <bar value="(player.cDis)/(player.cDis + player.cInt + player.cStr) * 100" popover="Discipline: {{player.dis}}" popover-trigger="mouseenter"><span>Dis</span></bar>
+      <bar type="warning" value="(player.cStr)/(player.cDis + player.cInt + player.cStr) * 100" popover="Strength: {{player.str}}" popover-trigger="mouseenter"><span>Str</span></bar>
     </progress>
   </div>
 </div>
