--- a/app/views/fireteam/weapons.html
+++ b/app/views/fireteam/weapons.html
@@ -1,17 +1,11 @@
-<div class="row ml-0 mr-0" style="height: 130px" ng-repeat="weapon in [player.weapons.BUCKET_PRIMARY_WEAPON, player.weapons.BUCKET_SPECIAL_WEAPON, player.weapons.BUCKET_HEAVY_WEAPON] track by $index">
+<div class="row ml-0 mr-0" style="height: 130px" ng-repeat="weapon in [player.weapons.primary, player.weapons.special, player.weapons.heavy] track by $index">
   <div class="col-md-4 col-xs-4 pt-10">
     <div class="card mb-0">
       <div class="front p-0">
-        <img popover="{{weapon.name}}" popover-trigger="mouseenter"
-             class="img-responsive weapon-img {{weapon.burnColor || 'kinetic-dmg'}}"
-             ng-src="{{weapon.icon}}" alt="{{weapon.name}}">
+        <img popover="{{weapon.weapon.name}}" popover-trigger="mouseenter"
+             class="img-responsive weapon-img {{weapon.weapon.burnColor || 'kinetic-dmg'}}"
+             ng-src="{{weapon.weapon.icon}}" alt="{{weapon.weapon.name}}">
       </div>
-      <!--<div class="back bg-greensea">-->
-        <!--<div class="col-md-12">-->
-          <!--<p class="text-center pt-10 text-sm">{{weapon.name}}</p>-->
-          <!--<p ng-show="player.stats" class="text-center text-sm">PGA: {{getWeaponKills(weapon.subType, player)}}</p>-->
-        <!--</div>-->
-      <!--</div>-->
     </div>
   </div>
   <div class="col-md-8 col-xs-8 pt-10">
