--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -13,3 +13,11 @@
     <ng-include src="'views/fireteam/history.html'"></ng-include>
   </tab>
 </tabset>
+<div class="row">
+  <div class="col-md-12">
+    <a class="btn btn-block btn-default bg-info dker"
+            href="http://destinytracker.com/destiny/trials/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
+            target="_blank"
+            type="button">View DestinyTracker Stats</a>
+  </div>
+  </div>
