fix background color

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -35,7 +35,7 @@
       </div>
 
       <section class="tile tile-simple">
-        <div class="tile-body bg-tr-black lt p-0">
+        <div class="tile-body p-0">
           <ng-include src="'views/fireteam/player.html'"></ng-include>
         </div>
       </section>
