--- a/app/views/fireteam/history.html
+++ b/app/views/fireteam/history.html
@@ -84,8 +84,8 @@
   <div class="col-xs-6 col-md-6 {{$even ? '' : 'pl-0'}}" ng-repeat="weapon in player.playerWeapons">
     <div class="p-0 col-xs-6 col-md-6 text-center">
       <a class="icon icon-default"
-         popover="{{weaponDefinitions[weapon.referenceId].name}}" popover-trigger="mouseenter">
-        <img class="img-responsive" ng-src="{{weaponDefinitions[weapon.referenceId].icon || ''}}">
+         popover="{{DestinyWeaponDefinition[weapon.referenceId].name}}" popover-trigger="mouseenter">
+        <img class="img-responsive" ng-src="{{DestinyWeaponDefinition[weapon.referenceId].icon || ''}}">
       </a>
     </div>
     <div class="p-0 col-xs-6 col-md-6 text-center">
@@ -99,9 +99,9 @@
 <div class="row">
   <div class="col-xs-4 col-md-3 text-center" style="height:120px" ng-repeat="medal in player.medals">
     <a class="icon"
-       popover="{{medalDefinitions[medal.id].statDescription}}" popover-trigger="mouseenter">
-      <img class="img-responsive" ng-src="{{('http://www.bungie.net' + medalDefinitions[medal.id].iconImage) || ''}}">
+       popover="{{DestinyMedalDefinition[medal.id].statDescription}}" popover-trigger="mouseenter">
+      <img class="img-responsive" ng-src="{{('http://www.bungie.net' + DestinyMedalDefinition[medal.id].iconImage) || ''}}">
     </a>
-    <p class="text-sm">{{medalDefinitions[medal.id].statName}}</p>
+    <p class="text-sm">{{DestinyMedalDefinition[medal.id].statName}}</p>
   </div>
 </div>
