--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,8 @@
     <div class="col-md-4 col-xs-12" ng-show="fireteam[0].name" ng-repeat="player in fireteam track by $index">
       <div class="row">
         <div ng-show="$index === 0" class="col-md-12">
-          <button class="btn btn-block btn-default" type="button" ng-click="suggestRecentPlayers()">Suggest Recent Players</button>
+          <button class="btn btn-block btn-default" type="button" ng-click="suggestRecentPlayers()"
+                  analytics-on analytics-event="Click" analytics-category="Suggest Recent Players">Suggest Recent Players</button>
         </div>
         <div class="col-md-12" ng-hide="$index === 0">
           <form class="form-horizontal" role="form" ng-submit="getPlayerbyName(firstMember, ($index))">
@@ -16,7 +17,10 @@
                   <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuMobile{{$index}}">
-                  <li ng-repeat="player in recentPlayers track by $index"><a ng-click="getRecentPlayer(player, ($parent.$index))">{{player.name}}</a></li>
+                  <li ng-repeat="player in recentPlayers track by $index">
+                    <a ng-click="getRecentPlayer(player, ($parent.$index))" analytics-on
+                       analytics-event="Click" analytics-category="Recent From Dropdown">{{player.name}}</a>
+                  </li>
                 </ul>
               </div>
               <input type="text" class="form-control" placeholder="Search for..." ng-model="firstMember">
