--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -81,6 +81,16 @@ body {
   padding: 0;
 }
 
+.btn.btn-icon-only {
+  padding: 16px 17px;
+  background-color: #f8f8f8;
+   i {
+     height: 33px;
+     width: 33px;
+     line-height: 33px;
+   }
+}
+
 .tabs-dark {
   background-color: rgba(0, 0, 0, 0.05) !important;
 }
