initial chardon.js and dummy data

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,6 +68,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "shared/color-schemes"; // color schemes
 @import "shared/print"; // print css
 @import "shared/animations"; // animations
+@import "chardinjs"; // animations
 
 .browsehappy {
   margin: 0.2em 0;
