--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -17,7 +17,8 @@
        href="http://destinytracker.com/destiny/trials/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
        target="_blank"
        type="button"
-       analytics-on analytics-event="Click" analytics-category="DestinyTracker">
+       analytics-on analytics-event="Click" analytics-category="DestinyTracker"
+       data-intro="Some Help description here" data-position="right">
        View DestinyTracker Stats
      </a>
   </div>
