placement stats with chardin explanations

--- a/app/views/fireteam/armor.html
+++ b/app/views/fireteam/armor.html
@@ -1,4 +1,4 @@
-<div class="row ml-0 mr-0">
+<div class="row ml-0 mr-0" data-intro="Current equipped armor, hover over image for the name" data-position="left">
   <div class="col-md-3 col-xs-3" ng-repeat="armor in [player.armors.head, player.armors.arms, player.armors.chest, player.armors.legs] track by $index">
     <div class="card">
       <div class="front p-0">
