--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -18,7 +18,7 @@
        target="_blank"
        type="button"
        analytics-on analytics-event="Click" analytics-category="DestinyTracker"
-       data-intro="Some Help description here" data-position="right">
+       data-intro="Trials stats on DestinyTracker" data-position="right">
        View DestinyTracker Stats
      </a>
   </div>
