--- a/app/styles/chardinjs.scss
+++ b/app/styles/chardinjs.scss
@@ -7,7 +7,8 @@
 }
 
 .chardinjs-overlay {
-//  position: fixed;
+  position: fixed;
+  z-index: -1;
 //  z-index: 999999;
 //  background-color: #000;
 //  opacity: 0;
@@ -16,14 +17,14 @@
 
 .chardinjs-helper-layer {
   position: fixed;
-  z-index: 9999998;
-  color: #000000;
+  z-index: -1;
+  color: #616f77;
 @include transition(all 0.3s ease-out);
 
-&.chardinjs-left { border-left: solid black 1px; margin-left: -10px; }
-&.chardinjs-right { border-right: solid black 1px; padding-right: 10px; }
-&.chardinjs-bottom { border-bottom: solid black 1px; padding-bottom: 10px; }
-&.chardinjs-top { border-top: solid black 1px; padding-top: 10px; }
+&.chardinjs-left { border-left: solid #616f77 1px; margin-left: -10px; }
+&.chardinjs-right { border-right: solid #616f77 1px; padding-right: 10px; margin-left: 10px;}
+&.chardinjs-bottom { border-bottom: solid #616f77 1px; padding-bottom: 10px; }
+&.chardinjs-top { border-top: solid #616f77 1px; padding-top: 10px; }
 }
 
 .chardinjs-tooltip {
