--- a/app/views/main.html
+++ b/app/views/main.html
@@ -45,10 +45,7 @@
       </section>
     </div>
 
-
-
-
-    <div ng-if="!fireteam[0].name" help-overlay="helpOverlay" class="col-md-4 col-xs-12" ng-repeat="player in [dummyFireteam] track by $index">
+    <div ng-if="!fireteam[0].name" help-overlay="helpOverlay" class="col-md-4 col-md-offset-4 col-xs-12" ng-repeat="player in [dummyFireteam] track by $index">
       <div class="row">
         <div ng-show="$index === 0" class="col-md-12">
           <button class="btn btn-block btn-default" type="button">Suggest Recent Players</button>
@@ -56,12 +53,10 @@
       </div>
 
       <div class="row" style="height:18px">
-        <div class="col-md-12 col-sm-12">
+        <div class="col-md-12 col-sm-12" data-intro="Useful hazards about the player" data-position="left">
           <span class="label bg-danger" style="margin-right:2px" ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index">{{hazard}}</span>
         </div>
       </div>
-
-      <button class="btn btn-block btn-default" type="button" ng-click="helpOverlay = !helpOverlay">overlay!</button>
 
       <section class="tile tile-simple">
         <div class="tile-body p-0">
@@ -70,8 +65,6 @@
       </section>
     </div>
   </div>
-
-
 
 </div>
 
